# ros2-vicon-receiver

./: Dockerfile  HOW_TO_BUILD.md  Makefile  README.md  docker-bake.hcl  install_libs.sh  run.sh
vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: communicator.hpp  publisher.hpp
vicon_receiver/launch/: client.launch.py
vicon_receiver/msg/: Position.msg
vicon_receiver/src/vicon_receiver/: communicator.cpp  publisher.cpp
